# herald

./: .dockerignore  .gitignore  makefile  pyproject.toml
.github/workflows/: docker.yaml
scripts/: herald.service
src/herald/: __main__.py
src/plugins/: fileplugin.py  httpplugin.py
tests/: __init__.py
